# globalPlanCombine

./: CMakeLists.txt
config/: startEndPoints.json  taskChannels.json
data/: 1.txt  input.txt  pathInfo.csv  refVector.csv
include/: AdjMatrix.h  fileOperation.h  globalPath.h  globalPlanInterface.h  refVector.h  rs.h  utilityFun.h  xythetaList.h
release/: globalPlanCombineRelease.rar
release/globalPlanCombineRelease/: CMakeLists.txt
release/globalPlanCombineRelease/include/: globalPlanInterface.h
release/globalPlanCombineRelease/matlab/: motionPlot.m
release/globalPlanCombineRelease/matlab/test/: distance_to_tangent_point.m  plot_circle.m  untitled.m
src/: AdjMatrix.cpp  fileOperation.cpp  globalPath.cpp  globalPlanInterface.cpp  refVector.cpp  rs.cpp  utilityFun.cpp
test/: readMainChannels.cpp  testBuildAdjanceMatrix.cpp  testCheckPointInCapsule.cpp  testGlobalPlannerInterface.cpp  testIntersection.cpp  testIsPointInsideSegmentment.cpp  testPath2RefVector.cpp  testProjection.cpp  testRead.cpp  test_Dijstra.cpp  test_pp.cpp
